# llm-verified-manipulation

./: .gitignore  .gitmodules  BUILD_COMMANDS.md  EXECUTION_MODES.md  FINALIZATION_SUMMARY.md  FINAL_TREE.txt  FINAL_VALIDATION.md  LICENSE  MANUAL_BUILD_GUIDE.md  OPTIONAL_UTILITIES.md  PYTHON_DEPENDENCIES.md  README.md  REPOSITORY_SUMMARY.md  REVIEWER_GUIDE.md  REVISION_ENGINEERING_AUDIT.md  RSS_SUBMISSION_READY.md  START_HERE.md  external-deps.md  fix_and_build.sh  rebuild.sh  test_build.sh
agent/: .gitignore  AGENT_USAGE_GUIDE.md  ARCHITECTURE_DIAGRAMS.md  COMPLETION_REPORT.md  IMPLEMENTATION_SUMMARY.md  NATURAL_LANGUAGE_AGENT_GUIDE.md  PAPER_FIGURES.md  QUICK_REFERENCE.md  README.md  __init__.py  action_tools.py  agent_app.py  agent_app_old.py  scene_manager.py  simple_backend.py  simple_frontend.html  simple_requirements.txt  start_agent.sh  start_simple.sh  task_graph.py  test_action_tools_plan_only.py
agent/utils/: transforms.py
configs/: agent_config.yaml  calibration_waypoints.example.yaml  handeye_eye_in_hand.example.yaml  handeye_eye_to_hand.example.yaml  realsense_calibration.example.yaml  realsense_calibration_opencv.example.yaml
docs/: ACTION_LIBRARY.md  API_REFERENCE.md  ARCHITECTURE.md  CALIBRATION_PIPELINE.md  EXCLUDED_COMPONENTS.md  MERGE_PLAYBOOK.md  QUICK_START.md  REAL_ROBOT_PARITY_CHECKLIST.md  REAL_ROBOT_QUICK_START.md  RELEASE_NOTES_v2.0.0.md  SAFETY_CHECKLIST.md
scripts/: run_demo.sh
scripts/diagnostics/: README.md  check_joint_limits.py  diagnose_robot_env.py  handeye_transform_viewer.py  system_diagnosis.py
scripts/plan_only/: launch_plan_only.sh
scripts/real_robot/: fix_realsense_issues.sh  restart_realsense.sh  start_hardware.sh
src/handeye_pipeline/: README.md  package.xml  setup.cfg  setup.py
src/handeye_pipeline/config/: charuco_5x7.yaml  realsense_d435i.yaml  uf850_realsense_eye_to_hand.yaml
src/handeye_pipeline/docs/: handeye_pipeline_v0.1.md  troubleshooting.md
src/handeye_pipeline/examples/: sample_dataset_example.yaml
src/handeye_pipeline/handeye_pipeline/: __init__.py  charuco_detector.py  cli.py  config.py  geometry.py  sample_io.py  solver.py  tf_export.py  validation.py
src/handeye_pipeline/handeye_pipeline/ros_nodes/: __init__.py  collect_samples_node.py  publish_calibration_tf_node.py
src/handeye_pipeline/launch/: collect_samples.launch.py  publish_calibration_tf.launch.py
src/handeye_pipeline/test/: test_cli.py  test_config.py  test_geometry.py  test_sample_io.py
src/mtc_action_library_core/: CMakeLists.txt  package.xml
src/mtc_action_library_core/include/mtc_action_library/: action_library.hpp  action_params.hpp  action_result.hpp  action_stats.hpp  task_builders.hpp
src/mtc_action_library_core/src/: action_library.cpp  action_stats.cpp  task_builders.cpp
src/mtc_action_library_py/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/mtc_action_library_py/mtc_action_library/: __init__.py  action_library.py  debug_tools.py
src/mtc_action_library_py/src/: bindings.cpp
src/mtc_interface/: CMakeLists.txt  package.xml
src/mtc_interface/action/: ExecutePour.action  ExecuteTask.action
src/mtc_interface/msg/: DetectedObject.msg  DetectionResult.msg
src/mtc_tutorial/: CMakeLists.txt  package.xml
src/mtc_tutorial/config/: demo_scene.yaml
src/mtc_tutorial/include/mtc_tutorial/: modular_task_builders.hpp  pour_task_builder.hpp
src/mtc_tutorial/launch/: charuco_handeye_calibration.launch.py  charuco_handeye_publish.launch.py  detection_only.launch.py  florence_visual_detection.launch.py  modular_task_server.launch.py  pick_place_demo.launch.py  plan_only_demo.launch.py  pour_demo.launch.py
src/mtc_tutorial/scripts/: charuco_pose_publisher.py  detection_to_planning_scene.py  mtc_mcp_server.py  object_marker_publisher.py  object_single_shot_detection.py  pour_client.py  ros_client_tools.py  spawn_demo_scene.py
src/mtc_tutorial/src/: execute_pour_server.cpp  execute_task_server.cpp  modular_task_builders.cpp  modular_task_server.cpp  mtc_agent_tools_node.cpp  mtc_tutorial.cpp  pour_task_builder.cpp  test_modular_tasks.cpp  test_pre_pour.cpp
